--- a/src/component/Statistics/Homepage/HomePage.css
+++ b/src/component/Statistics/Homepage/HomePage.css
@@ -14,3 +14,13 @@
     font-size: 18px;
     color: #757575;
 }
+.job-Category-title{
+    font-weight: 700;
+    font-size: 48px;
+    color: #1A1919;
+}
+.job-Category-p{
+    font-weight: 500;
+    font-size: 16px;
+    color: #757575;
+}
