--- a/src/component/JobCategory/JobCategory.css
+++ b/src/component/JobCategory/JobCategory.css
@@ -1,3 +1,8 @@
+.jobCategory{
+    background-color: #F9F9FF;
+    padding: 15px;
+    border-radius: 10px;
+}
 .jobCategory-title{
     font-weight: 800;
     font-size: 20px;
