--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -12,9 +12,10 @@ nav{
 }
 .menu a{
     margin-right: 20px;
-    color: #757575;
+    color: #0c0c0c;
     font-weight: 500;
     font-size: 16px;
+    padding: 10px;
 }
 .btn{
     background: linear-gradient(90deg, #7E90FE 0%, #9873FF 100%);
